Tiny CSS fix to top bar on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -284,9 +284,9 @@ div.hidden {
   }
 
   div#info-bar {
-    height: 0;
     width: 100%;
     text-align: center;
+    padding: 0;
   }
 
   div#main-content {
